# TradeMCP

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-ci.yml
backend/rust_exec_engine/: Cargo.toml  README.md
config/: compute.yaml  error_policy.yaml  execution_controls.yaml  pnl.yaml  risk_controls.yaml  smoke.yaml  typing.yaml
config/integrations/: integration_targets.yaml
config/markets/: crypto_base.yaml  forex_base.yaml  intl_stocks_base.yaml  stocks_base.yaml
django_mcp_toolkit/: manage.py
django_mcp_toolkit/django_mcp_toolkit/: settings.py  urls.py  wsgi.py
django_mcp_toolkit/greeks_viz/: mcp_tool.py  views.py
docs/: audit_1.md  market_expansion_research.md
docs/architecture/: arch_plan_01.md  arch_plan_02_pa.md  arch_plan_02_pb.md  typing_roadmap.md
docs/plans/: plan_1.md  plan_2.md
scripts/: _bootstrap.py  generate_sample_data.py  ping_adapters.py  run_pipeline.py  scrape_finviz.py  trading_cli.py
src/greeks_viz/: apps.py  urls.py
src/trading/: __init__.py  app.py  backtest.py  compute.py  config.py  data_ingestion.py  errors.py  execution_client.py  execution_controls.py  forecasting.py  indicators.py  log_setup.py  mcp_workflow.py  metadata.py  paths.py  pnl.py  regime.py  reports.py  research.py  review.py  risk.py  router.py  strategy_registry.py  viz.py  volatility.py
src/trading_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_db_schema.py  test_log_setup.py  test_models.py  test_paths_metadata_reports.py  test_regime_and_risk.py  test_router_plan.py  test_services.py
(+34 files in other folders)
